# Luma

./: .gitmodules  CMakeLists.txt  LumaEngine.natvis
CMake/: LumaHelpers.cmake  ModuleExport.h.in  Vulkan.cmake
Engine/Audio/: CMakeLists.txt
Engine/Audio/Include/Luma/: Audio.h
Engine/Audio/Include/Luma/Audio/: AudioDevice.h
Engine/Audio/Source/: AudioDevice.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/Include/Luma/Components/: CameraComponent.h  TransformComponent.h
Engine/Core/Include/Luma/Containers/: Array.h  BufferView.h  Character.h  Event.h  Fifo.h  Hash.h  HashMap.h  Hasher.h  Lazy.h  Pair.h  String.h  StringConversion.h  StringFormat.h  StringHash.h  StringView.h
Engine/Core/Include/Luma/Core/: RTTI.h
Engine/Core/Include/Luma/Math/: AABB.h  AABB2.h  AABB3.h  AxisAngle.h  Color.h  Concepts.h  Functions.h  MathMacros.h  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  MatrixProjection.h  MatrixProjection.hxx  MatrixTransform.h  MatrixTransform.hxx  Quaternion.h  Ray.h  Rect.h  Rect2.h  Rect3.h  Transform.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
Engine/Core/Include/Luma/Memory/: Allocator.h  Memory.h  Ref.h  RefCounted.h  SharedRef.h
Engine/Core/Include/Luma/Modules/: Module.h  ModuleManager.h
Engine/Core/Include/Luma/Runtime/: Application.h  Assertion.h  Asset.h  Component.h  DebugLevel.h  DesktopWindow.h  DialogFilters.h  Entity.h  EntityHandle.h  ExitCode.h  Flags.h  Format.h  Object.h  Path.h  RTTI.h  Scene.h  Sprite.h  TextAlignment.h  TextStyle.h  Time.h  Types.h  Window.h
Engine/Core/Source/: Module.cpp  ModuleManager.cpp  RTTI.cpp
Engine/Core/Source/Components/: CameraComponent.cpp  TransformComponent.cpp
Engine/Core/Source/Containers/: StringFormat.cpp
Engine/Core/Source/Math/: AABB.cpp  AxisAngle.cpp  Matrix.cpp  MatrixTransform.cpp  Quaternion.cpp  Ray.cpp  Rect.cpp  Transform.cpp  Vector.cpp
Engine/Core/Source/Memory/: Allocator.cpp  Memory.cpp
Engine/Core/Source/Modules/: ModuleManager.cpp
Engine/Core/Source/Platform/Windows/: FileDialog.cpp  FileSystem.cpp  StringConversion.cpp  Time.cpp
Engine/Core/Source/Runtime/: Application.cpp  Component.cpp  DesktopWindow.cpp  DialogFilters.cpp  Entity.cpp  EntityHandle.cpp  Path.cpp  RTTI.cpp  Scene.cpp  Sprite.cpp  Window.cpp
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/Include/Luma/: Graphics.h  Rendering.h
Engine/Graphics/Include/Luma/Asset/: Material.h  MaterialType.h  MeshVertex.h  StaticMesh.h
Engine/Graphics/Include/Luma/Components/: StaticMeshRenderer.h
Engine/Graphics/Include/Luma/RHI/: CommandBuffer.h  Interface.h  RenderDevice.h
Engine/Graphics/Include/Luma/Rendering/: BindingSet.h  BindingSetLayout.h  BindingType.h  BlendFactor.h  BlendFunction.h  BlendOperation.h  BlitRegion.h  Buffer.h  BufferUsage.h  BufferUtils.h  Camera.h  ColorChannel.h  ColorSpace.h  CommandBuffer.h  CompareOperation.h  ComponentMapping.h  ComponentSwizzle.h  ComputePipeline.h  CullMode.h  DescriptorAllocator.h  DescriptorType.h  Fence.h  Filter.h  FrameBufferInfo.h  FrontFace.h  GraphicsPipeline.h  GraphicsPipelineCache.h  GraphicsState.h  ImmediateExecutor.h  IndexFormat.h  InputLayout.h  Interface.h  LoadOperation.h  PipelineStage.h  PolygonMode.h  PresentMode.h  PrimitiveTopology.h  Queue.h  QueueType.h  RenderDevice.h  (+38 more)
Engine/Graphics/Include/Luma/Utility/: SlangCommon.h  SlangFwd.h  SpirvReflectCommon.h
Engine/Graphics/Include/Luma/Vulkan/: BindingSetLayoutImpl.h  CommandBufferImpl.h  ComputePipelineImpl.h  FenceImpl.h  GraphicsPipelineImpl.h  RenderDeviceImpl.h  SemaphoreImpl.h  TextureImpl.h  TextureViewImpl.h
Engine/Graphics/Source/Asset/: Material.cpp  StaticMesh.cpp
Engine/Graphics/Source/Components/: StaticMeshRenderer.cpp
Engine/Graphics/Source/RHI/: RenderDevice.cpp
Engine/Graphics/Source/Rendering/: BufferUtils.cpp  Camera.cpp  CommandBuffer.cpp  ComponentMapping.cpp  GraphicsPipelineCache.cpp  GraphicsState.cpp  InputLayout.cpp  RenderDevice.cpp  Renderer2D.cpp  ResourceBarrier.cpp  Sampler.cpp  ShaderCompileRequest.cpp  ShaderCompiler.cpp  Swapchain.cpp  TextureUtils.cpp
Engine/Graphics/Source/Utility/: SlangCommon.cpp  SpirvReflectCommon.cpp
Engine/Graphics/Source/Vulkan/: BindingSetImpl.cpp  BindingSetImpl.h  BindingSetLayoutImpl.cpp  BindingSetLayoutImpl.h  BufferImpl.cpp  BufferImpl.h  CommandBufferImpl.cpp  CommandBufferImpl.h  ComputePipelineImpl.cpp  Conversions.h  DescriptorAllocatorImpl.cpp  DescriptorAllocatorImpl.h  FenceImpl.cpp  FenceImpl.h  GraphicsPipelineImpl.cpp  ImmediateExecutorImpl.cpp  ImmediateExecutorImpl.h  QueueImpl.cpp  QueueImpl.h  RenderDeviceImpl.cpp  RenderDeviceImpl.h  SamplerImpl.cpp  SamplerImpl.h  SemaphoreImpl.cpp  SemaphoreImpl.h  ShaderImpl.cpp  ShaderImpl.h  SwapchainImpl.cpp  SwapchainImpl.h  TextureImpl.cpp  TextureImpl.h  TextureViewImpl.cpp  TextureViewImpl.h  VulkanFwd.h  VulkanMemoryAllocator.cpp  VulkanUtils.cpp  VulkanUtils.h
Engine/Graphics/Source/WebGPU/: Device.cpp  RenderDevice.h
Engine/Input/: CMakeLists.txt
Engine/Input/Include/Luma/Input/: InputDevice.h  InputEvent.h  InputProvider.h
Engine/Input/Include/Luma/Platform/: DesktopInputProvider.h
Engine/Input/Source/Platform/: DesktopInputProvider.cpp
Engine/Math/: CMakeLists.txt
Engine/Math/Include/Luma/: Math.h
Engine/Math/Include/Luma/Math/: AABB.h  AABB2.h  AABB3.h  AxisAngle.h  Concepts.h  Matrix.h  Matrix2.h  Quaternion.h  Ray.h  Rect.h  Rect2.h  Rect3.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
Engine/Math/Source/: AxisAngle.cpp  Matrix.cpp  Quaternion.cpp  Ray.cpp
Engine/Shaders/: Renderer2D.slang
Engine/UI/: CMakeLists.txt
Engine/UI/Include/Luma/Rendering/: ImguiRenderer.h
Engine/UI/Include/Luma/Vulkan/: ImguiRendererImpl.h
Engine/UI/Source/Rendering/: ImguiRenderer.cpp
Engine/UI/Source/Vulkan/: ImguiRendererImpl.cpp
Example/HelloMesh/: CMakeLists.txt  Main.cpp
Example/HelloTexture/: ArgParse.cpp  CMakeLists.txt  Main.cpp
Example/HelloTexture/Assets/Shaders/: HelloTexture.slang
Example/HelloTriangle/: CMakeLists.txt  (+1 more)
Example/HelloWorld/: CMakeLists.txt  Main.cpp
Example/Renderer2D/: CMakeLists.txt  Main.cpp
(+2 files in other folders)
